--- a/css/mypage/user-info.css
+++ b/css/mypage/user-info.css
@@ -1,53 +1,76 @@
-@media (min-width:1920px) {
-    body{
-        max-width: 1920px;
-        margin: 0 auto;
-    }
-}
-html{
-    font-size: var(--basic-size-pc);
-}
-.common_frame h1{
+.main-title{
     text-align: center;
-    text-transform: uppercase;
     margin-top: var(--space-4x-large);
-    font-size: 2.5rem;
 }
-ol{
-    margin: 0 auto;
-    max-width: 850px;
-    list-style: none;
-    margin-top: var(--space-2x-large);
+.top{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4rem;
+}
+.user-info{
+    display: flex;
+    gap: 10rem;
+    align-items: center;
+    padding: 0  55px;
+    width: 100%;
+    flex: 40%;
+}
+.name{
+    display: flex;
+    gap: 1rem;
+}
+.user-email{
+    text-align: center;
+}
+.user-email p{
+    padding: 0.25rem;
+}
+.user-email p a{
+    border: 1px solid #000;
+    width: 184px;
+    height: 38px;
+    padding: 0.25rem;
+}
+.user-summary{
+    display: flex;
+    gap: 1rem;
+    padding:1rem 0;
+    justify-content: space-between;
+    width: 100%;
+    text-align: center;
+    flex: 60%;
+}
+.summary{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    flex: 3;
+}
+.order-step{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: var(--color-inactive);
-    flex-wrap: nowrap;
-    text-align: center;
+    margin-top: 3rem;
 }
-ol li.arrow {
-    flex: 0 0 auto;
+.arrow{
+    background: url("../../resource/signup/lucide_chevron-right.svg") 50% 50% / cover;
     width: 1.25rem;
     height: 1.25rem;
-    background: url("../../resource/signup/lucide_chevron-right.svg") no-repeat center / contain;
-    flex-wrap: nowrap;
 }
-ol li.act{
-    color: #000;
+.order-step li{
+    position: relative;
+    width: 200px;
+    text-align: center;
 }
-ol li span{
-    font-style: inherit;
-    margin-right: 1rem;
-    font-size: 0.9rem;
+li h3{
+    margin-bottom: 1rem;
 }
-ol li strong{
-    font-size: 1.25rem;
-    font-weight: 700;
-}
-h2{
+.my-order{
     margin-top: 6rem;
-    margin-bottom: 3rem;
-    text-align: center  ;
+}
+.my-order h1{
+    text-align: center;
+    margin-bottom: 2rem;
 }
 .oreder-list{
     width: 100%;
@@ -94,27 +117,52 @@ tbody td{
 .price-col {
     display: table-cell;
 }
-.btn {
-    text-align: center;
-}
-.btn-1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    background-color: #000;
-    color: #fff;
-    font-size: 1rem;
-    height: 60px;
-    width: 270px;
-    margin: 0 auto;
-    margin-top: 6rem;
-    text-decoration: none;
-}
 @media (max-width: 1460px){
-
+    .user-info{
+        padding: 0  45px;
+        gap: 7rem;
+    }
+    .user-summary {
+        gap: 0;
+    }
+}
+@media (max-width: 1117px){
+    .user-info{
+        padding: 0 30px;
+        gap: 4rem;
+    }
+}
+@media (max-width: 965px){
+    .user-info{
+        padding: 0 20px;
+        gap: 2rem;
+    }
+}
+@media (max-width: 850px){
+    .user-info{
+        padding: 0 20px;
+        gap: 1rem;
+    }
+}
+@media (max-width: 800px){
+    .user-info{
+        padding: 0 15px;
+        gap: 0.5rem;
+    }
 }
 @media (max-width: 768px) {
+    .common_frame .top{
+        flex-direction: column;
+    }
+    .user-email{
+        text-align: right;
+    }
+    .user-info{
+        justify-content: space-between;
+    }
+    .user-summary{
+        justify-content: space-between;
+    }
     thead {
         display: none;
     }
