--- a/css/new_detail.css
+++ b/css/new_detail.css
@@ -221,7 +221,7 @@
 }
 
 .cart{
-    padding: 15px 245px;
+    padding: 0.75rem 0px;
     font-weight: var(--font-strong);
 }
 
@@ -238,7 +238,19 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    max-height: 50px;
+    overflow: hidden;
 }
+
+.product_info ol.on{
+    max-height: 1000px;
+}
+
+.view_more{
+    cursor: pointer;
+    z-index: 1000;
+}
+
 
 .product_info span{
     position: absolute;
@@ -292,6 +304,7 @@
 @media (max-width:768px){
     .product_detail {
         margin-right: 1rem;
+        display: flex;
         flex-direction: column;
     }
 }
