서비스 예약 css 작업중

--- a/css/order/order-form.css
+++ b/css/order/order-form.css
@@ -233,6 +233,10 @@ input[type="checkbox"].product-checkbox {
     height: 1.2rem;
     cursor: pointer;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    display: none;
+}
 .product {
     display: flex;
     gap: 1.5rem;
